# fog-rml

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: release.yml  sonarcloud.yml
data/mappings/commands/: issue_template.ttl
data/mappings/requests/: test.py
examples/: multi_repo_service_demo.py
examples/data/: r1.json  r1.ttl  r1_mapping.ttl  r2.json  r2.ttl  r2_mapping.ttl  r3.json  r3.ttl  r3_mapping.ttl
scripts/: run_rml_conformance.py
src/fog_rml/: __init__.py  __main__.py  namespaces.py
src/fog_rml/algebra/: Terms.py  __init__.py
src/fog_rml/commands/: __init__.py  base.py  list_articles.py  list_issues.py  run.py
src/fog_rml/expressions/: Constant.py  Expression.py  FunctionCall.py  Reference.py
src/fog_rml/functions/: builtins.py  fog_plugins.py  idlab_plugins.py  registry.py
src/fog_rml/mapping/: MappingParser.py
src/fog_rml/operators/: EquiJoinOperator.py  ExtendOperator.py  Operator.py  ProjectOperator.py  SourceFactory.py  SourceOperator.py  UnionOperator.py  __init__.py
src/fog_rml/serializers/: NQuadsSerializer.py  NTriplesSerializer.py  TurtleSerializer.py  __init__.py
src/fog_rml/sparql/: service_call.py
src/fog_rml/utils/: term_utils.py
src/pyhartig/: __main__.py  namespaces.py
src/pyhartig/algebra/: Terms.py  Tuple.py
src/pyhartig/commands/: base.py  run.py  (+2 more)
tests/test_suite/: TEST_SUITE_README.md  conftest.py  run_all_tests.py  test_01_source_operators.py  test_02_extend_operators.py  test_03_operator_composition.py  test_04_complete_pipelines.py  test_05_builtin_functions.py  test_06_expression_system.py  test_07_library_integration.py  test_08_real_data_integration.py  test_11_explain_json.py  test_12_project_operator.py  test_13_equijoin_operator.py  test_14_csv_xml_sources.py  test_15_referencing_object_maps.py  test_16_join_edge_cases.py  test_17_named_graphs.py  test_18_fnml_plugins.py  test_19_fno.py
(+255 files in other folders)
