# pyproject.toml

# 1. Build System Configuration
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 2. Project Metadata
[project]
name = "fog-rml"
version = "0.3.8"
description = "fog-rml: An algebra-based RML engine for Knowledge Graph Construction."
readme = "README.md"

# Authors
authors = [
    { name = "Anthony MUDET", email = "anthony.mudet@etu.univ-nantes.fr" },
    { name = "Mohamed Lamine MERAH", email = "mohamed.merah@etu.univ-nantes.fr" }
]
license = { file = "LICENSE" }
keywords = [
    "SPARQL",
    "Algebra",
    "Olaf Hartig",
    "Query Processing",
    "Knowledge Graph Construction",
    "Semantic Web",
    "LS2N",
    "Nantes Universite"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 3. Dependencies
dependencies = [
    "jsonpath-ng>=1.7.0",
    "rdflib>=6.0.0",
]

# 4. Optional Dependencies (for development)
[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

# 5. Project URLs
[project.urls]
Homepage = "https://github.com/Armotik/fog-rml"
Repository = "https://github.com/Armotik/fog-rml"
Theoretical-Foundation = "https://arxiv.org/abs/2503.10385"

[project.scripts]
fog-rml = "fog_rml.__main__:main"

# 6. Tool Configuration for pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "coverage_suite: tests included in the SonarQube coverage suite",
    "edge_case: tests focused on robustness and unusual inputs",
]

# 7. Tool Configuration for coverage
[tool.coverage.run]
relative_files = true
source = ["src/fog_rml"]
branch = true

